# cg-21-22

./: .gitignore  README.md
lab1/: .gitignore  CMakeLists.txt  README.md
lab1/src/: lab2.cpp  lab3.cpp  name.cpp  pentagon.cpp  square.cpp
lab1/src/lab2/: README.md  name.cpp
lab1/src/lab3/: README.md  lab3.cpp
lab1/src/lab4/: 1.model_loading.fs  README.md  lab4.cpp
lab1/src/lab5/: 1.model_loading.fs  README.md  lab5.cpp
lab1/src/lab6/: README.md  chest.mtl  f1.mtl  lab6.cpp  lamp.mtl
lab1/src/lab7/: README.md  f1.mtl  lab7.cpp  low_oly_chest.mtl
